src/component-library/site-components/ImageAndTextBlock/ImageAndTextBlock.module.scss
@use '../../foundation/index.module' as *;
@use '../../utilities/index.module' as *;

.background {
  background: var(--background);
  overflow: hidden;
}

.wrapper {
  @include responsive-container;

  padding-top: var(--theme-collapse-padding-top, #{$spacing-13});
  padding-bottom: $spacing-13;
}

.container {
  @include responsive-grid;

  width: 100%;
  gap: 0;
}

.image {
  @include responsive-grid-span($default: 6, $breakpoint-l: 6);

  display: flex;
  position: relative;
  padding: 0 0 $spacing-13 0;

  @include media(screen-l) {
    padding: 0;
  }

  img {
    width: 100%;
    height: 100%;
    border-radius: $radius-medium;
    object-fit: cover;
  }
}

.keep-aspect-ratio {
  img {
    object-fit: contain;
    aspect-ratio: unset;
    height: max-content;
  }
}

.content {
  @include responsive-grid-span($default: 6, $breakpoint-l: 5);
  @include responsive-grid-start($default: 1, $breakpoint-l: 8);

  &.content-cf {
    @include responsive-grid-span(
      $default: 6,
      $breakpoint-l: 10,
      $breakpoint-xl: 5
    );
    @include responsive-grid-start(
      $default: 1,
      $breakpoint-l: 1,
      $breakpoint-xl: 8
    );
  }

  color: var(--text);
  display: flex;
  flex-direction: column;
  justify-content: center;

  p {
    &:first-of-type {
      margin-top: 0;
    }

    &:last-of-type {
      margin-bottom: 0;
    }
  }
}

.long {
  img {
    aspect-ratio: 358/588;
    object-fit: cover;

    @include media(screen-m) {
      aspect-ratio: 770/588;
    }

    @include media(screen-l) {
      aspect-ratio: 458/715;
    }

    @include media(screen-xl) {
      aspect-ratio: 534/834;
    }
  }
}

.header {
  padding-bottom: $spacing-6;
}

.subheader {
  display: flex;
  padding-bottom: $spacing-2;
}

.ctas {
  width: 100%;
  display: flex;
  flex-direction: column;
  padding-top: $spacing-7;
  gap: px-to-rem(8) 0;

  @include media(screen-m) {
    min-width: px-to-rem(314);
    align-self: self-start;
  }

  div {
    a,
    button {
      width: 100%;
      text-align: center;
      justify-content: center;

      @include media(screen-l) {
        width: fit-content;
      }
    }
  }
}

.image-right {
  @include media(screen-l) {
    grid-row: 2;

    & > div:first-of-type {
      @include responsive-grid-start($default: 1, $breakpoint-l: 7);

      grid-row: 1;
      padding: 0;
    }

    & > div:last-of-type {
      @include responsive-grid-start($default: 1, $breakpoint-l: 1);
    }
  }
}

.ratings {
  display: grid;
  gap: px-to-rem(24) 0;
  margin-top: px-to-rem(24);
}

.icon-list-wrapper {
  .image {
    grid-row: 2;
    padding: $spacing-13 0 0 0;

    @include media(screen-m) {
      grid-row: 1;
      padding: 0 0 $spacing-13 0;
    }

    @include media(screen-l) {
      padding: 0;
    }
  }
}

.icon-list {
  list-style-type: none;
  padding: 0;
  margin: px-to-rem(40) 0 0;
  display: grid;
  grid: auto / 1fr;
  gap: $spacing-5;

  @include media(screen-m) {
    grid: auto / 1fr 1fr;
  }

  li {
    display: flex;
    align-items: flex-start;
    gap: 0 $spacing-2;
    @include apply-body-large;

    span {
      display: flex;
    }
  }
}

.pricing {
  .image {
    @include responsive-grid-span($breakpoint-l: 5);
  }

  .content {
    @include responsive-grid-span($breakpoint-l: 6);
    @include responsive-grid-start($breakpoint-l: 7);
  }

  .children {
    display: flex;
    flex-direction: column;
    gap: $spacing-5;

    & > div {
      display: flex;
      flex-direction: column;
      gap: $spacing-1;
    }
  }
}

.hide-on-mobile {
  @include media(screen-l, max) {
    display: none;
  }
}

.hide-on-mobile-cf {
  display: none;

  @include media(screen-xl) {
    display: block;
  }
}

.hero {
  &.wrapper {
    padding: $spacing-9 0;
  }
}

.hero-cf {
  &.wrapper {
    padding: $spacing-4 0 $spacing-9 0;

    @include media(screen-xl) {
      padding: $spacing-9 0;
    }
  }
}

